# ml-duet

./: .gitignore  ACKNOWLEDGEMENTS.MD  README.md  frozen_requirements.txt  pyproject.toml
duet/: __init__.py  augmentations.py  layers.py
duet/models/: duet.py  essl.py  simclr.py
duet/models/encoders/: cifar10_resnet.py
duet/objectives/: autoencoding.py  classification.py  common.py  duet.py  essl.py  nt_xent.py  schedulers.py
scripts/: parser.py  train_ssl.py
